# fastenum

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  setup.py  е.py
benchmark/: README.md  discordenum.py  main.py  qratorenum.py
fastenum/: __init__.py  fastenum.py  parcher.py  patches.py
tests/: builtin_test.py  test_fastenum.py
tests/builtin_tests/: test_36.py  test_37.py  test_38.py
